--- a/.github/workflows/index.html
+++ b/.github/workflows/index.html
@@ -15,7 +15,7 @@
       direction: rtl;
     }
     .button {
-      background: linear-gradient(45deg, #d4145a, #fbb03b)
+      background: linear-gradient(45deg, #d4145a, #fbb03b);
       border: none;
       border-radius: 20px;
       color: white;
@@ -161,4 +161,3 @@
   </script>
 </body>
 </html>
-
