--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       max-width: 700px;
       display: flex;
       align-items: center;
-      flex-direction: row-reverse; /* картинка справа, текст слева */
+      flex-direction: row-reverse; /* фото справа, текст слева */
     }
 
     .comment img {
@@ -197,7 +197,7 @@
         display.textContent = "⚡ Po përgatitet sinjali...";
       }, 3000);
       setTimeout(() => {
-        display.textContent = "⚠️ Ju duhet të mbushni llogarinë tuaj në 1xBet";
+        display.textContent = "⚠️ Ju duhet të mbushni llogarinë tuaj në 1xBet me 250 Lekë";
       }, 6000);
     }
 
@@ -210,5 +210,6 @@
   </script>
 </body>
 </html>
+
 
 
